# BioIO

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
benchmark/: .gitignore  Makefile  README.md  Rakefile  bioio.cc  bioio.py  fasta_reader.py  plot_benchmark.gp
include/BioIO/: bioio.h  fasta.h  fasta_reader.h  fastq_reader.h  read_buffer.h  seq_entry.h  seq_reader.h
src/: fasta.cc  fasta_reader.cc  fastq_reader.cc  read_buffer.cc  seq_entry.cc  seq_entry.h  seq_reader.cc
test/: test_fasta.cc  test_fasta_reader.cc  test_fastq.cc  test_fastq_reader.cc  test_read_buffer.cc  test_seq_entry.cc  test_seq_reader.cc
test/fasta_files/: test1.fasta  test10.fasta  test11.fasta  test3.fasta
test/fastq_files/: .test1.fastq.swp  test1.fastq  test10.fastq  test11.fastq  test12.fastq  test13.fastq  test2.fastq  test3.fastq  test4.fastq  test5.fastq  test6.fastq  test7.fastq  test9.fastq
